fixed footer button and some spacing in the sections

--- a/style/footer.css
+++ b/style/footer.css
@@ -15,7 +15,6 @@ footer {
   flex-direction: column;
   width: 80%;
   margin: 0 auto;
-  margin-top: 1.5%;
 }
 
 .footer-inside {
