--- a/style/style_gabriel.css
+++ b/style/style_gabriel.css
@@ -473,7 +473,7 @@ nav {
   align-items: center;
 }
 
-.settings-box .settings-main .settings-button .menu-buttons .switch {
+ .menu-buttons .switch {
   text-align: left;
   width: 56px;
   height: 32px;
@@ -484,33 +484,33 @@ nav {
   cursor: pointer;
 }
 
-.settings-box .settings-main .settings-button .menu-buttons .switch span {
+.menu-buttons .switch span {
   display: block;
   width: 100%;
   height: 100%;
   border-radius: 60px;
 }
 
-.settings-box .settings-main .settings-button .menu-buttons .switch input {
+ .menu-buttons .switch input {
   opacity: 0;
   position: absolute;
 }
 
-.settings-box .settings-main .settings-button .menu-buttons .switch span::before, .settings-box .settings-main .settings-button .menu-buttons .switch span::after {
+ .menu-buttons .switch span::before, .menu-buttons .switch span::after {
   content: "";
   cursor: pointer;
   position: absolute;
 }
 
-.settings-box .settings-main .settings-button .menu-buttons .switch input:focus ~ span {
+ .menu-buttons .switch input:focus ~ span {
   box-shadow: 0 0 0 4px #43b556;
 }
 
-.settings-box .settings-main .settings-button .menu-buttons .switch input:checked:focus ~ span {
+ .menu-buttons .switch input:checked:focus ~ span {
   box-shadow: 0 0 0 4px #fff;
 } 
 
-.settings-box .settings-main .settings-button .menu-buttons .switch span::before {
+ .menu-buttons .switch span::before {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
@@ -521,7 +521,7 @@ nav {
   opacity: 1;
 }
 
-.settings-box .settings-main .settings-button .menu-buttons .switch span::after {
+ .menu-buttons .switch span::after {
   top: 50%;
   z-index: 3;
   transition: transform .4s cubic-bezier(0.44, -0.12, 0.07, 1.15);
@@ -533,12 +533,12 @@ nav {
   box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
 }
 
-.settings-box .settings-main .settings-button .menu-buttons .switch input:checked ~ span::before {
+ .menu-buttons .switch input:checked ~ span::before {
   transform: scale(0);
   opacity: .7s;
 }
 
-.settings-box .settings-main .settings-button .menu-buttons .switch input:checked ~ span::after {
+ .menu-buttons .switch input:checked ~ span::after {
   transform: translate3d(100%, -50%, 0);
 }
 
